Fixed: -Remove body scroll when modal is modal. -Overflow of text when the description of a task is to long.
Added:
-Window service.

--- a/src/app/components/card-task/card-task.component.scss
+++ b/src/app/components/card-task/card-task.component.scss
@@ -11,6 +11,10 @@
         font-weight: bold;
         margin-bottom: 10px;
     }
+    .body {
+        overflow: hidden;
+        word-wrap: break-word;
+    }
     &:hover {
         box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.3);
     }
